--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <span id="result"></span>
     </div>
   </div>
-  <h5 class="crate">crated By زياد اشرف هه</h5>
+  <h5 class="crate">crated By  احمد كامل </h5>
   <script src="app.js"></script>
 </body>
 </html>
